--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-[#F5F8FF]">
-    <header class="w-[87.5%] mx-auto my-10">
+    <header class="my-10">
         <!-- Navbar section start here -->
 
-        <nav class="flex justify-between items-center">
-            <h2 class="logo"><a href="#"><img src="assests/images/logo.png" alt=""></a></h2>
+        <nav class="w-[87.5%] mx-auto font-[Inter] flex justify-between items-center">
+            <h2 class="logo"><a href="#"><img src="assests/images/logo.png" class="w-5/6 lg:w-full" alt=""></a></h2>
             <div class="flex justify-between gap-10 md:gap-12">
                 <ul class="hidden sm:flex justify-between items-center gap-8 md:gap-10 font-[Inter] text-[#8987A1]">
                     <li><a href="#" class="font-bold text-[#252432]">Home</a></li>
@@ -37,14 +37,29 @@
         
         <!-- Banner section start here -->
 
-        
+        <section class="w-full md:w-[87.5%] mx-auto banner flex flex-col-reverse md:flex-row justify-between items-end my-28 gap-y-10 gap-5">
+            <div class="banner-content w-11/12 md:max-w-[50%] mx-auto">
+                <h1 class="font-[Noto-Serif] font-bold text-3xl sm:text-4xl md:text-[65px] text-[#E95A08] leading-tight"><span class="text-black">ALWAYS</span> FRESH <br> FLOWERS</h1>
+                <p class="font-[Inter] sm:text-xl mt-4 text-[rgba(0,0,0,0.5)] w-[95%]  sm:w-[85%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="banner-image w-full md:flex-1">
+                <img src="assests/images/hero-flower.png" width="100%" alt="">
+            </div>
+        </section>
 
         <!-- Banner section end here -->
 
         <!-- ========================================================================= -->
     </header>
     <main>
-
+        <!-- Our plant section start here -->
+        <section class="our-plant w-[87.5%] mx-auto my-20">
+            <div class="our-plant-content text-center">
+                <h2 class="font-[Noto-Serif] font-bold text-[50px] mb-3.5"><span class="text-[#E95A08]">Our</span> Plants</h2>
+                <p class="font-[Inter] sm:text-xl w-[90%] md:w-[70%] mx-auto text-[rgba(0,0,0,0.5)]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+        </section>
+        <!-- Our plant section end here -->
     </main>
     <footer>
 
