--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="w-[87.5%] mx-auto font-[Inter] flex justify-between items-center">
             <h2 class="logo"><a href="#"><img src="assests/images/logo.png" class="w-5/6 lg:w-full" alt=""></a></h2>
             <div class="flex justify-between gap-10 md:gap-12">
-                <ul class="hidden sm:flex justify-between items-center gap-8 md:gap-10 font-[Inter] text-[#8987A1]">
+                <ul class="hidden md:flex justify-between items-center gap-8 md:gap-10 font-[Inter] text-[#8987A1]">
                     <li><a href="#" class="font-bold text-[#252432]">Home</a></li>
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">About us</a></li>
@@ -53,12 +53,96 @@
     </header>
     <main>
         <!-- Our plant section start here -->
+
         <section class="our-plant w-[87.5%] mx-auto my-20">
             <div class="our-plant-content text-center">
-                <h2 class="font-[Noto-Serif] font-bold text-[50px] mb-3.5"><span class="text-[#E95A08]">Our</span> Plants</h2>
+                <h2 class="font-[Noto-Serif] font-bold text-3xl md:text-4xl lg:text-[50px] mb-3.5"><span class="text-[#E95A08]">Our</span> Plants</h2>
                 <p class="font-[Inter] sm:text-xl w-[90%] md:w-[70%] mx-auto text-[rgba(0,0,0,0.5)]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
+            <div class="our-plant-container grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-5 gap-y-8 mt-14">
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plant-card font-[Inter] text-center">
+                    <div>
+                        <img src="assests/images/sample-flower-image.png" width="100%" alt="">
+                    </div>
+                    <h4 class="font-medium sm:text-[22px] mt-4">Lilly Blossom</h4>
+                    <h5 class="font-bold sm:text-[22px] my-2">20 USD</h5>
+                    <div class="cart-button mt-5">
+                        <button class="bg-[#E95A08] text-white font-semibold px-5 py-3 w-full">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
         </section>
+
         <!-- Our plant section end here -->
     </main>
     <footer>
