plants-lover section is added along with responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
 <body class="bg-[#F5F8FF]">
     <header class="my-10">
@@ -144,6 +147,40 @@
         </section>
 
         <!-- Our plant section end here -->
+
+        <!-- ========================================================================= -->
+        
+        <!-- Plants Lover section start here -->
+
+        <section class="plants-lover w-[87.5%] mx-auto mt-10 md:mt-52">
+            <div class="plants-lover-container flex flex-col md:flex-row items-center gap-x-20 gap-y-10">
+                <div class="plants-lover-image relative w-full md:w-[50%]">
+                    <img src="assests/images/flower-store.png" width="100%" alt="">
+
+                    <!-- Truseted Badge -->
+                    <img src="assests/images/trusted-badge.png" class="badge-image hidden md:inline-block w-[286px] absolute -top-36 -right-24 z-10" alt="">
+                </div>
+                <div class="plants-lover-content flex-1 space-y-4 lg:space-y-7">
+                    <h2 class="font-[Noto-serif] font-bold text-4xl md:text-3xl lg:text-4xl xl:text-6xl md:-ml-5">Flower & Plants Lover</h2>
+                    <ol class="list-disc text-[rgba(0,0,0,0.5)] space-y-4 lg:space-y-6 ml-6 md:ml-0">
+                        <li>
+                            <p class="font-[Inter] text-sm md:text-xs lg:text-base xl:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                        <li>
+                            <p class="font-[Inter] text-sm md:text-xs lg:text-base xl:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                        <li>
+                            <p class="font-[Inter] text-sm md:text-xs lg:text-base xl:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Plants Lover section end here -->
+
+        <!-- ========================================================================= -->
     </main>
     <footer>
 
