Latest Deal section has been added with responsive design

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <img src="assests/images/trusted-badge.png" class="badge-image hidden md:inline-block w-[286px] absolute -top-36 -right-24 z-10" alt="">
                 </div>
                 <div class="plants-lover-content flex-1 space-y-4 lg:space-y-7">
-                    <h2 class="font-[Noto-serif] font-bold text-4xl md:text-3xl lg:text-4xl xl:text-6xl md:-ml-5">Flower & Plants Lover</h2>
+                    <h2 class="font-[Noto-Serif] font-bold text-3xl sm:text-4xl md:text-3xl lg:text-4xl xl:text-6xl md:-ml-5">Flower & Plants Lover</h2>
                     <ol class="list-disc text-[rgba(0,0,0,0.5)] space-y-4 lg:space-y-6 ml-6 md:ml-0">
                         <li>
                             <p class="font-[Inter] text-sm md:text-xs lg:text-base xl:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -179,6 +179,46 @@
 
 
         <!-- Plants Lover section end here -->
+
+        <!-- ========================================================================= -->
+        
+        <!-- Latest Deal section start here -->
+        <section class="latest-deal w-[87.5%] mx-auto my-24">
+            <div class="latest-deal-content text-center w-[85%] md:w-[68%] mx-auto mb-10 md:mb-20">
+                <h2 class="font-[Noto-Serif] font-bold text-5xl"><span class="text-[#E95A08]">Latest</span> Deals</h2>
+                <p class="font-[Inter] text-xl text-[rgba(0,0,0,0.5)] mt-6">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="deal-image-container grid md:grid-cols-3 md:grid-rows-2 gap-5">
+                <div class="first-image relative bg-[url('assests/images/deal-bloom.png')] bg-no-repeat bg-cover bg-center h-52 rounded-[14px] order-1">
+                    <!-- Overlay -->
+                    <div class="absolute inset-0 bg-[rgba(0,0,0,0.4)] pointer-events-none rounded-[14px] z-10"></div>
+                    <!-- Inner Text Content -->
+                    <div class="inner-content absolute inset-0 flex flex-col justify-center items-center text-white overflow-hidden space-y-3 z-20">
+                        <h3 class="font-[Noto-Serif] font-bold text-xl">60% Off | Bloom Plant</h3>
+                        <p class="font-[Inter] font-semibold underline"><a href="">Shop Now</a></p>
+                    </div>
+                </div>
+                <div class="second-image relative bg-[url('assests/images/deal-ana.png')] bg-no-repeat bg-cover bg-center h-52 rounded-[14px] order-2 md:order-3">
+                    <!-- Overlay -->
+                    <div class="absolute inset-0 bg-[rgba(0,0,0,0.4)] pointer-events-none rounded-[14px] z-10"></div>
+                    <!-- Inner Text Content -->
+                    <div class="inner-content absolute inset-0 flex flex-col justify-center items-center text-white overflow-hidden space-y-3 z-20">
+                        <h3 class="font-[Noto-Serif] font-bold text-xl">30% Off | Ana  Plant</h3>
+                        <p class="font-[Inter] font-semibold underline"><a href="">Shop Now</a></p>
+                    </div>
+                </div>
+                <div class="third-image relative bg-[url('assests/images/deal-zabo.png')] bg-no-repeat bg-cover bg-center h-52 md:h-auto md:col-span-2 md:row-span-2 rounded-[14px] order-3 md:order-2">
+                    <!-- Overlay -->
+                    <div class="absolute inset-0 bg-[rgba(0,0,0,0.4)] pointer-events-none rounded-[14px] z-10"></div>
+                    <!-- Inner Text Content -->
+                    <div class="inner-content absolute inset-0 flex flex-col justify-center items-center text-white overflow-hidden space-y-3 z-20">
+                        <h3 class="font-[Noto-Serif] font-bold text-xl md:text-3xl xl:text-5xl">25% Off | Zabo Plant</h3>
+                        <p class="font-[Inter] font-semibold lg:text-xl xl:text-[28px] underline"><a href="">Shop Now</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Latest Deal section end here -->
 
         <!-- ========================================================================= -->
     </main>
