--- a/index.html
+++ b/index.html
@@ -221,6 +221,25 @@
         <!-- Latest Deal section end here -->
 
         <!-- ========================================================================= -->
+        
+        <!-- Join section start here -->
+        
+        <section class="join-section bg-[url('assests/images/news-letter-bg.png')] bg-no-repeat bg-cover bg-center mt-28">
+            <div class="join-content flex flex-col justify-center items-center xl:px-[305px] py-[196px]">
+                <h1 class="font-[Noto-Serif] font-bold text-2xl sm:text-4xl lg:text-5xl xl:text-[50px] text-white mb-7">Join the colorful Bunch</h1>
+                <form action="" class="font-[Inter] flex items-center">
+                    <div class="input-email bg-white w-[240px] sm:w-[400px] lg:w-[644px] h-[50px] leading-[50px] pl-5">
+                        <input type="email" name="" id="" placeholder="Write email">
+                    </div>
+                    <div class="subscribe-button font-semibold bg-[#E95A08] text-white px-5 sm:px-10 xl:px-[50px] py-[13px]">
+                        <button>Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!-- Join section end here -->
+
+        <!-- ========================================================================= -->
     </main>
     <footer>
 
