--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
         
         <!-- Join section start here -->
         
-        <section class="join-section bg-[url('assests/images/news-letter-bg.png')] bg-no-repeat bg-cover bg-center mt-28">
-            <div class="join-content flex flex-col justify-center items-center xl:px-[305px] py-[196px]">
+        <section class="join-section w-full bg-[url('assests/images/news-letter-bg.png')] bg-no-repeat bg-cover bg-center mt-28">
+            <div class="join-content w-[87.5%] mx-auto flex flex-col justify-center items-center py-[196px]">
                 <h1 class="font-[Noto-Serif] font-bold text-2xl sm:text-4xl lg:text-5xl xl:text-[50px] text-white mb-7">Join the colorful Bunch</h1>
                 <form action="" class="font-[Inter] flex items-center">
                     <div class="input-email bg-white">
